--- a/anon-gui/src/main/webapp/pages/reduce/reduceTableList.xhtml
+++ b/anon-gui/src/main/webapp/pages/reduce/reduceTableList.xhtml
@@ -15,26 +15,26 @@
 		</ui:include>
 		
 		<h:panelGrid columns="2" >
-			<h:form rendered="#{databasePanelBacking.connected}" >
+			<h:form rendered="#{connectBacking.connected}" >
 				<h:panelGrid columns="2" cellpadding="5">
 					<p:outputLabel for="schemaId" value="Selected Schema:" />
-					<p:selectOneMenu id="schemaId" value="#{databasePanelBacking.selectedSchema}" style="width:150px">
-						<p:ajax update="@([id$=databaseTableListForm])" listener="#{databasePanelBacking.onSchemaChanged}"/>
-						<f:selectItems value="#{databasePanelBacking.schemas}" />
+					<p:selectOneMenu id="schemaId" value="#{connectBacking.selectedSchema}" style="width:150px">
+						<p:ajax update="@([id$=databaseTableListForm])" listener="#{connectBacking.onSchemaChanged}"/>
+						<f:selectItems value="#{connectBacking.schemas}" />
 					</p:selectOneMenu>				
 		    	</h:panelGrid>
 			</h:form>
-			<h:outputText id="tableCount" value="#{databasePanelBacking.tableCount} tables" rendered="#{databasePanelBacking.connected}"/>
+			<h:outputText id="tableCount" value="#{connectBacking.tableCount} tables" rendered="#{connectBacking.connected}"/>
 		</h:panelGrid>	
 		
-		<h:form id="databaseTableListForm" rendered="#{databasePanelBacking.connected}" >
+		<h:form id="databaseTableListForm" rendered="#{connectBacking.connected}" >
 							               			       
 			<p:dataTable 
 					id="databaseTableList"
-					value="#{databasePanelBacking.tableList}" 
+					value="#{connectBacking.tableList}" 
 					var="databaseTableInfo"  
 					selectionMode="single" selection="#{reduceBacking.editedTable}" rowKey="#{databaseTableInfo.name}"
-					filteredValue="#{databasePanelBacking.filteredTables}"
+					filteredValue="#{connectBacking.filteredTables}"
 					scrollable="true" scrollHeight="600"
 					styleClass="myTable" rowIndexVar="rowIndex">
 				
