--- a/anon-gui/src/main/webapp/pages/reduce/reduce.xhtml
+++ b/anon-gui/src/main/webapp/pages/reduce/reduce.xhtml
@@ -85,7 +85,7 @@
 		
 			<h:panelGrid id="buttons" columns="3" cellpadding="5">
 				<p:commandButton value="Test" actionListener="#{reduceBacking.onTest()}" update="configureForm"/>
-				<p:commandButton value="Save" actionListener="#{reduceBacking.onSave()}" rendered="#{null != reduceBacking.reduceTestResult}" update="buttons"/>
+				<p:commandButton value="Save" actionListener="#{reduceBacking.onSave()}" rendered="#{null == reduceBacking.reductionMethodData and null != reduceBacking.reduceTestResult}" update="buttons"/>
 				<p:commandButton value="Delete" actionListener="#{reduceBacking.onDelete()}" rendered="#{null != reduceBacking.reductionMethodData}" update="configureForm"/>
 			</h:panelGrid>
 		
